# alpha2hex-cli

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  release.yml
apps/: CMakeLists.txt  cli.cpp
include/alpha2hex/: alpha2hex.hpp  version.h  version.h.in
src/: CMakeLists.txt  alpha2hex.cpp
tests/: CMakeLists.txt  testlib.cpp
